Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines)